got add property code working

--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -117,7 +117,7 @@
       <input class="text nicetext fullwidth address-picker__input" type="text" data-show-chars-left="" autocomplete="off" placeholder="Start typing an address...">
       <form method="post" accept-charset="UTF-8" class="address-picker__form">
         {{ csrfInput() }}
-        <input type="hidden" name="action" value="closedProperties/save">
+        <input type="hidden" name="action" value="closed-properties/closed-properties/save">
         <input type="hidden" name="propId" value="" class="id-input">
         <input type="hidden" name="photos" value="" class="photos-input">
         <div class="address-picker__list-wrapper"></div>
