--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -45,6 +45,7 @@
       <div class="closed-properties-list__images">
         
         {% set selectedProperty = property.photos|replace({'[': "", ']': ""}) %}
+        {{ selectedProperty }}
         {% for photos in closedProperties[property.propId].photos %}
 
           {# first print selected photos in order #}
@@ -80,14 +81,14 @@
 
         <form method="post" accept-charset="UTF-8" class="closed-properties-form">
           {{ csrfInput() }}
-          <input type="hidden" name="action" value="closedProperties/remove">
+          <input type="hidden" name="action" value="closed-properties/closed-properties/remove">
           <input type="hidden" name="propId" value="{{ property.propId}}">
           <input type="submit" class="btn remove-button" value="Remove property">
         </form>
 
         <form method="post" accept-charset="UTF-8" class="closed-properties-form">
           {{ csrfInput() }}
-          <input type="hidden" name="action" value="closedProperties/save">
+          <input type="hidden" name="action" value="closed-properties/closed-properties/save">
           <input type="hidden" name="propId" value="{{ property.propId }}">
           <input
             type="hidden"
@@ -143,7 +144,7 @@
         {% set order = order|merge([property.propId]) %}
       {% endfor %}
       {{ csrfInput() }}
-      <input type="hidden" name="action" value="closedProperties/reorder">
+      <input type="hidden" name="action" value="closed-properties/closed-properties/reorder">
       <input type="hidden" name="order" data-original-order="{{ order|json_encode }}" value="{{ order|json_encode }}" class="order-input">
       <input type="submit" class="btn submit save-button" value="Save">
     </form>
